--- a/config/confluence.yml
+++ b/config/confluence.yml
@@ -4,7 +4,7 @@ header_3: 'h3.'
 list: '-'
 bullet: '*'
 numbered_list: '#'
-color: '{color:<%value%>}<%text%>'
+color: '{color:<%color%>}<%text%>{color}'
 strong: '*<%text%>*'
 emphasis: '_<%text%>_'
 table_head: '|<%text%>|'
